@@ -16,7 +16,7 @@ $DEBUG = 1
 
 require "tracer"
 
-require "deep-connect/deep-connect"
+require "deep-connect"
 
 Thread.abort_on_exception=true
 
