@@ -1,3 +1,7 @@
+Fri Nov 26 22:57:26 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* deep-connect.rb, deep-space.rb: ConstSpace機能追加
+
 Thu Nov 25 00:07:24 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* conf.rb: メッセージレベルのデフォルト変更
